# simple-pic-server

./: .gitignore  Cargo.toml  Makefile  package.json  pnpm-lock.yaml
embedded/: default_conf.toml
embedded/templates/: plain.html
server/: finfo.rs  getconfig.rs  main.rs  server.rs  static_const.rs  static_var.rs  template.rs
src/: App.tsx  index.tsx  main.rs
static/: default_conf.toml
web/: package.json
