[package]
name = "simplepicserver"
version = "0.1.0"
edition = "2021"
author = "furffy@github"
[[bin]]
name = "simple-pic-server"
path = "server/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime", "tcp"] }
tokio = { version = "1.21", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0"