[package]
name = "simple-pic-server"
version = "0.1.0"
edition = "2021"
author = "furffy@github"
[[bin]]
name = "simple-pic-server"
path = "server/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime", "tcp"] }
tokio = { version = "1.21", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
querystring = "1.1.0"
lazy_static = "1.4.0"
config = "0.13.3"
include_dir = "0.7.3"
serde_json = "1.0.91"
serde = "1.0.152"
tera = "1"